# canon-systems

./: .gitignore  CHANGELOG.md  README.md  install.sh  package.json  pyproject.toml  requirements-dev.txt
.cursor/: hooks.json
backend/: README.md
backend/knowledge-api/: README.md  alembic.ini  pyproject.toml
backend/knowledge-api/alembic/: env.py
backend/knowledge-api/alembic/versions/: 20260410_0001_initial_artifacts.py  20260411_0002_run_dispatch_metadata.py  20260411_0003_run_claim_metadata.py  20260411_0004_run_launch_scope_metadata.py  20260414_0005_run_jira_task_linkage.py  README.md
backend/knowledge-api/app/: __init__.py  bootstrap.py  config.py  main.py
backend/knowledge-api/app/api/: __init__.py  router.py
backend/knowledge-api/app/api/routers/: artifacts.py  health.py  runs.py  work_items.py
backend/knowledge-api/app/auth/: __init__.py  dependencies.py  models.py
backend/knowledge-api/app/db/: base.py  init_db.py  session.py
backend/knowledge-api/app/models/: __init__.py  artifact_api.py  artifact_db.py  run_api.py  run_db.py  work_item_api.py  work_item_db.py
backend/knowledge-api/app/policies/: __init__.py  artifacts.py
backend/knowledge-api/app/services/: artifacts.py  runs.py  work_items.py
backend/knowledge-api/app/storage/: __init__.py  s3.py
backend/knowledge-client/: README.md  pyproject.toml
backend/knowledge-client/src/knowledge_client/: __init__.py  client.py  errors.py  models.py
backend/knowledge-policy/: README.md  pyproject.toml
backend/knowledge-policy/src/knowledge_policy/: __init__.py  models.py
backend/knowledge-schema/: README.md  pyproject.toml
backend/knowledge-schema/src/knowledge_schema/: __init__.py  enums.py  models.py
backend/knowledge-worker/: README.md  pyproject.toml
backend/knowledge-worker/knowledge_worker/: __init__.py  main.py
backend/knowledge-worker/src/knowledge_worker/: __init__.py  config.py  main.py  models.py  service.py
backend/knowledge-worker/src/knowledge_worker/api/: __init__.py  router.py
backend/knowledge-worker/src/knowledge_worker/projections/: __init__.py  memory_capture_to_markdown.py  memory_to_markdown.py
backend/memory-adapter/: README.md  pyproject.toml
backend/memory-adapter/memory_adapter/: __init__.py  main.py
backend/memory-adapter/src/memory_adapter/: __init__.py  config.py  main.py  models.py  service.py
backend/memory-adapter/src/memory_adapter/adapters/: __init__.py  mempalace.py
backend/memory-adapter/src/memory_adapter/api/: __init__.py  router.py
backend/shared/: README.md  pyproject.toml
backend/shared/canon_backend_shared/: __init__.py  auth.py  events.py  ids.py  packet_archive.py  run_ledger.py  tasks.py
backend/state-api/: README.md  pyproject.toml
backend/state-api/state_api/: __init__.py  api.py  checkpoints.py  config.py  events.py  leases.py  main.py  models.py  packet_archive.py  run_ledger.py  storage.py  tasks.py
backend/state-api/tests/: __init__.py  conftest.py  test_checkpoint_get.py  test_checkpoint_put.py  test_healthz.py  test_lease_acquire.py  test_lease_release.py  test_lease_renew.py  test_packet_archive.py  test_run_ledger.py  test_tasks.py
backend/synthesis/: README.md  pyproject.toml
backend/synthesis-web/: README.md  pyproject.toml
backend/synthesis-web/synthesis_web/: __init__.py  cache.py  main.py  reader.py  renderer.py  search.py
backend/synthesis-web/synthesis_web/templates/: base.html  index.html  not_found.html  page.html  vault_home.html
backend/synthesis-web/synthesis_web_tests/: __init__.py  _fakes.py  conftest.py  test_404.py  test_backlinks.py  test_etag.py  test_graph.py  test_healthz.py  test_index.py  test_page_render.py  test_reader_source_scan.py  test_search.py  test_vault_home.py  test_zero_install.py
backend/synthesis/synthesis/: __init__.py  generator.py  main.py  publisher.py  redaction.py  sources.py
backend/synthesis/synthesis_tests/: _fakes.py  conftest.py  test_endpoints.py  test_generator.py  test_publisher_moto.py
docs/: CANON-CREDENTIAL-AND-OFFLINE-PLAYBOOK.md  CANON-PRESENTATION-EVIDENCE.md  CANON-PRIORITIZED-ROADMAP-2026.md  CANON-SYSTEMS-ONE-PAGER-2026.md  CANON-SYSTEMS-PRESENTATION-2026.pptx  CANON-VS-DEVIN-STRATEGY-2026.md  CANON-VS-SANDCASTLE-STRATEGY-2026.md  CLAUDE-BRIEF-PRESENTATION-REVISION-2026-04-30.md  CLAUDE-DESIGN-UI-UX-SPEC-2026-05-01.md  COMPANION-KNOWLEDGE-MODEL.md  CURSOR-SDK-AWS-VALIDATION-2026-05-01.md  CURSOR-SDK-WRITE-PATH-SMOKE.md  DEPRECATIONS.md  E0-T3-MIGRATION-NOTES.md  E0-T4-INFRA-IMPORT.md  GOOGLE-MEET-MEDIA-API-NOTES.md  LIVE-MEETING-BOT.md  MEMORY-PLATFORM-BACKLOG.md  MEMORY-PLATFORM-PLAN.md  MEMORY-PLATFORM-RUNTIME-AND-AGENTS.md  OBSIDIAN-MIND-CATALOGUE.md  ONBOARDING.md  PROJECT-PLANNER-RETRIEVAL-RATIONALE.md  ROADMAP.md  SANDCASTLE-TEXT-CHAT-NOTES-2026-04-30.md  STRUCTURED-RESUME-TASK-MEMORY-PLAN.md  SYSTEM-WORKFLOW.md  VAULT-LAYOUT.md  WAVE-0-AUDIT.md  WAVE-0-CLOSEOUT.md
examples/: company-registry.example.json  memory-layer.secrets.env.example  memory-layer.team.env.example
infra/: README.md
scripts/: aws_create_canon_state_tables.sh  aws_ecs_deploy_knowledge_api_with_state.sh  clone_memory_layer_secret.py  import_fmo_edward_tasks.py  migrate_knowledge_api_tenant.py  migrate_memory_secrets.py  migrate_state_api_tenant.py  probe_knowledge_artifacts.py  smoke-test.sh  validate_memory_endpoints.py
tests/: test_agent_templates.py  test_auth_migration.py  test_auth_migration_assets.py  test_aws_secrets.py  test_backend_layout.py  test_checkpoint_concurrency.py  test_cli_auto_rewire.py  test_cli_checkpoint.py  test_cli_report.py  test_cli_secrets.py  test_cli_synth_publish.py  test_cli_synth_show.py  test_cli_tasks.py  test_consolidation_smoke.py  test_doctor.py  test_dor_log.py  test_e2e_check.py  test_flow_audit.py  test_graph_indexer.py  test_infra_layout.py  test_install_prefix.py  test_live_plan.py  test_memory_health.py  test_mempalace_fallback.py  test_metrics_rollup.py  test_packet_archive.py  test_packet_archive_cli.py  test_qa_validate.py  test_readiness.py  test_readiness_cli.py  test_release_publish.py  test_run_ledger.py  (+16 more)
(+482 files in other folders)
