[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canon-memory-layer"
version = "0.2.0"
description = "Agent-facing memory client for any repository. Tenant-scoped, AWS-backed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]

[project.scripts]
canon-memory-layer = "memory_layer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"memory_layer.templates.hooks" = ["*"]
"memory_layer.templates.rules" = ["*"]
"memory_layer.templates.agents" = ["*"]
