[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canon-systems"
version = "3.1.1"
description = "Canon Systems — Cursor-native workflow: memory, agent chain (Scoper → Cursor Pilot → QA Gate), hooks, and auto-setup. Tenant-scoped, AWS-backed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]

[project.scripts]
canon = "canon_systems.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"canon_systems.templates.hooks" = ["*"]
"canon_systems.templates.rules" = ["*"]
"canon_systems.templates.agents" = ["*"]
