[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-api"
version = "0.1.0"
description = "Canonical API service for Canon Systems v2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "alembic>=1.13,<2",
  "boto3>=1.35,<2",
  "canon-backend-shared",
  "fastapi>=0.115,<1",
  "knowledge-policy",
  "knowledge-schema",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
