[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-schema"
version = "0.1.0"
description = "Shared canonical knowledge schemas for Canon Systems v2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Edward Walker" }]
keywords = ["canonical", "knowledge", "schema", "memory", "orchestration"]
dependencies = [
  "pydantic>=2.7,<3",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
