[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-worker"
version = "0.1.0"
description = "Background jobs for Canon Systems v2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "canon-backend-shared",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "knowledge-client",
  "memory-adapter",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["knowledge_worker*"]
