[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canon-backend-shared"
version = "0.0.0"
description = "Shared types and utilities for Canon backend services."
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = []

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["canon_backend_shared*"]
