[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "state-api"
version = "0.0.0"
description = "Operational state / checkpoint API (scaffold)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "boto3>=1.35,<2",
  "canon-backend-shared",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
  "moto[dynamodb]>=5.0,<6",
  "httpx>=0.27,<1",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["state_api*"]
