[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthesis-web"
version = "0.1.0"
description = "Browser-facing SSR read path over the E5-T2 Obsidian vault (Wave 5 / E5-T4)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3",
  "boto3>=1.35,<2",
  "botocore>=1.35,<2",
  "jinja2>=3.1,<4",
  "markdown-it-py>=3.0,<4",
  "mangum>=0.17,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2,<9",
  "moto[s3]>=5.0,<6",
  "httpx>=0.27,<1",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["synthesis_web*"]
